run the fetch from api request

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_RAPID_API_KEY = "de6535ac44mshc1932de895aa93ep111f7cjsn2ef56a9e0f4b";
+REACT_APP_RAPID_API_KEY = "6b6cb8e240msh666e380fa227457p1f8de5jsn962af9883479"
